<resources>
    <string name="app_name">SimEssentials</string>

    <string name="action_settings">Settings</string>
    <string name="sim_info">Sim Info</string>
    <string name="sim_balance">Check Balance</string>
    <string name="sim_ownnumber">Own Number</string>
    <string name="sim_viewall">View All USSDs</string>
    <string name="title_activity_sim_details">SimDetails</string>

    <string name="OperatorName">Operator</string>
    <string name="DeviceId">Device Id</string>
    <string name="CountryISO">Country ISO</string>
    <string name="SimSerial">SIM Serial</string>
    <string name="SubId">Subs. Id</string>

    <string name="na">N/A</string>
    <string name="nosim_info">Oops!!! Some problem while reading SIM Card.</string>
    <string name="error">Oops!!! Seems like something went Wrong.</string>
    <string name="errorXMLparsing">Oops!!! Seems like something went Wrong.</string>

    <string name="title_activity_all_ussd">AllUssd</string>
    <string name="title_activity_operator_details">OperatorDetails</string>

    <string name="hello_world">Hello world!</string>

    <string name="op_details">Operator Details</string>
    <string name="op_name">Operator Name</string>
    <string name="op_bal">Bal. USSD</string>
    <string name="op_own">Own No. USSD</string>
    <string name="op_callOp">Operator USSD</string>

</resources>
