<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivitySimEssentials">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/op_details"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">
            <TextView
                android:text="@string/op_name"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/OperatorName"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                />
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">
            <TextView
                android:text="@string/op_bal"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/Bal_USSD"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                />
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">
            <TextView
                android:text="@string/op_own"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/Own_USSD"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                />
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">
            <TextView
                android:text="@string/op_callOp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/Op_USSD"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>
